test-services/user-service/deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-service
  labels:
    name: user-service
  annotations:
    linkerd.io/inject: enabled
