test-services/user-service/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
        version: v0.0.0
    spec:
      containers:
        - name: user-service
          image: user-service:0.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              name: user-service
