test-services/user-service/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 32477
      targetPort: user-service
  type: LoadBalancer
